<?xml version="1.0" encoding="UTF-8"?>
<!--####################################################################################################
  # This file is part of the Distributed Component-Based Traffic Simulation (DisCo-BaTS) project.      #
  # Copyright (C) 2026 David Reiher <https://github.com/dvdrhr>                                        #
  #                                                                                                    #
  # This program is free software: you can redistribute it and/or modify it under the terms of the     #
  # GNU Lesser General Public License version 3 as published by the Free Software Foundation           #
  # This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;          #
  # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.          #
  # See the GNU Lesser General Public License version 3 for more details.                              #
  # You should have received a copy of the GNU Lesser General Public License along with this program.  #
  # If not, see <https://www.gnu.org/licenses/lgpl+gpl-3.0.txt/>.                                      #
  #                                                                                                    #
  # Module: reflection                                                                                 #
  # File: pom.xml                                                                                      #
  # Last Updated: 2026-02-17 20:25:01                                                                  #
  ####################################################################################################-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>de.uol.discobats.util</groupId>
  <version>0.1-SNAPSHOT</version>
  <artifactId>reflection</artifactId>
  <packaging>jar</packaging>
  
  <dependencies>
    
    <dependency>
      <groupId>de.uol.discobats.meta</groupId>
      <artifactId>metamodel</artifactId>
      <version>0.1-SNAPSHOT</version>
    </dependency>
  
  </dependencies>
  
  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  
  <build>
    <plugins>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <!--<arg>-J-Xdebug</arg>
            <arg>-J-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</arg>-->
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
          </compilerArgs>
          <fork>true</fork>
        </configuration>
      </plugin>
    
    </plugins>
  </build>

</project>